# spice_gen

./: .gitignore  README.md  pyproject.toml
examples/: inverter.yaml  nand2.yaml  opamp_snippet.yaml  sky130_aoi21.yaml  sky130_inverter.yaml  sky130_nand2.yaml
pdks/: sky130A.yaml
src/spice_gen/: __init__.py  cli.py
src/spice_gen/generator/: __init__.py  base.py  hspice.py  ngspice.py  spice3.py
src/spice_gen/model/: __init__.py  component.py  netlist.py  primitives.py
src/spice_gen/parser/: __init__.py  builder.py  loader.py
src/spice_gen/pdk/: __init__.py  pdk_config.py  resolver.py
src/spice_gen/schema/: __init__.py  cell_schema.py
tests/: conftest.py
tests/fixtures/: inverter.yaml
tests/integration/: test_end_to_end.py  test_pdk_end_to_end.py
tests/unit/: test_builder.py  test_deps.py  test_generators.py  test_pdk.py  test_primitives.py
